Use G1GC Garbage Collector
From https://github.com/pelias/packer-elasticsearch/pull/3:

The G1GC garbage collector has been available for years now but the ES
folk have waited about 4 years for it to mature before they gave it
their blessings. There is still some contention around universal support
and enabling it by default in ES but these shouldn't affect us as we're
only targeting standard hardware and Posix OS's. The default CMS garbage
collector is considered the best choice for general use-cases, the G1GC
collector can help reduce long GC cycles.

See https://medium.com/naukri-engineering/garbage-collection-in-elasticsearch-and-the-g1gc-16b79a447181